derive/test/compile_fail/record_as_seq_incomplete_indexes.stderr
error: unsupported attribute `index` on struct field
 --> compile_fail/record_as_seq_incomplete_indexes.rs:6:12
  |
6 |     #[sval(index = 1)]
  |            ^^^^^
